@@ -1,6 +1,6 @@
 Package: TraMineRextras
 Version: 0.5.5
-Date: 2019-04-18
+Date: 2019-04-30
 Title: TraMineR Extension
 Authors@R: c(
   person("Gilbert", "Ritschard", role = c("aut", "cre", "ths", "cph"),
