@@ -1,13 +1,16 @@
-                CHANGES IN TraMineRextras VERSION 0.5.5 [2019-04-18] (Development version)
+                CHANGES IN TraMineRextras VERSION 0.5.5 [2019-04-30] (Development version)
 
 Changes in existing functions
     o   seqprecarity() and seqprecstart() gain a argument 'with.missing'.
     o   seqprecarity()}: there is now a print method for the generated
         'seqprec' object that prevents the printing of all its attributes.
+    o   seqprecorr(): to avoid a border effect when method is 'FREQ', 
+        'TRATEDSS', or 'TRATE', the computed transition frequencies or 
+        probabilities p are adjusted as p - .1/marg when p > 1 - marg. 
     o   seqtabstocc() gains an argument 'with.missing'.
 
 Bug fixes
-    o   seqprecorr(): method='TRATE' now works as expected. 
+    o   seqprecorr(): method='TRATE' now works as expected.
     o   seqprecarity(), seqprecorr(), and seqprecstart(): errors due
         to bad handling of missing states.
 
